--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -1,7 +1,7 @@
 name: Build and deploy a container to an Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: githbaction45  # set this to the name of your Azure Web App
+  AZURE_WEBAPP_NAME: jgggbjb  # set this to the name of your Azure Web App
 
 on:
   push:
