--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: githubactionregistry.azurecr.io/coursegoal:$GITHUB_SHA
+          tags: githubactionregistry.azurecr.io/coursegoal:${{ github.sha }}
           file: Dockerfile
 
   deploy:
@@ -52,4 +52,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: 'githubactionregistry.azurecr.io/coursegoal:$GITHUB_SHA'
+          images: 'githubactionregistry.azurecr.io/coursegoal:${{ github.sha }}'
